<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/mine09"
            android:textColor="@color/color333333"
            android:textSize="@dimen/font25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:gravity="center"
            android:text="@string/mine10"
            android:textColor="@color/color999999"
            android:textSize="@dimen/font16" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_marginTop="@dimen/magin_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/magin_18"
            android:paddingRight="@dimen/magin_18"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/color333333"
                android:textSize="@dimen/font14" />


            <EditText
                android:id="@+id/et_realname"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/input_name"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:textSize="@dimen/font14" />
        </LinearLayout>

        <TextView
            style="@style/my_line_h"
            android:layout_marginLeft="@dimen/magin_12"
            android:layout_marginRight="@dimen/magin_12"
            android:background="@color/coloreeeeee" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/magin_18"
            android:paddingRight="@dimen/magin_18"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/color333333"
                android:textSize="@dimen/font14" />


            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="true"
                    android:drawableLeft="@drawable/selector_radio"
                    android:drawablePadding="@dimen/margin_4"
                    android:gravity="center"
                    android:paddingRight="@dimen/margin_5"
                    android:paddingTop="@dimen/margin_5"
                    android:text="@string/boy"
                    android:textColor="@color/color333333" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/magin_30"
                    android:button="@null"
                    android:drawableLeft="@drawable/selector_radio"
                    android:drawablePadding="@dimen/margin_4"
                    android:gravity="center"
                    android:paddingRight="@dimen/margin_5"
                    android:paddingTop="@dimen/margin_5"
                    android:text="@string/girl"
                    android:textColor="@color/color333333" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            style="@style/my_line_h"
            android:layout_marginLeft="@dimen/magin_12"
            android:layout_marginRight="@dimen/magin_12"
            android:background="@color/coloreeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/magin_18"
            android:paddingRight="@dimen/magin_18"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@color/color333333"
                android:textSize="@dimen/font14" />



            <EditText
                android:id="@+id/et_age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/input_age"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:textSize="@dimen/font14" />
        </LinearLayout>

        <TextView
            style="@style/my_line_h"
            android:layout_marginLeft="@dimen/magin_12"
            android:layout_marginRight="@dimen/magin_12"
            android:background="@color/coloreeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/magin_18"
            android:paddingRight="@dimen/magin_18"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mine06"
                android:textColor="@color/color333333"
                android:textSize="@dimen/font14" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/mine07"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/color333333"
                android:textColorHint="@color/color999999"
                android:textSize="@dimen/font14" />
        </LinearLayout>


        <TextView
            style="@style/my_line_h"
            android:layout_marginLeft="@dimen/magin_12"
            android:layout_marginRight="@dimen/magin_12"
            android:background="@color/coloreeeeee" />


        <TextView
            android:id="@+id/tv_next"
            style="@style/my_bt"
            android:layout_marginBottom="@dimen/magin_20"
            android:layout_marginLeft="@dimen/magin_35"
            android:layout_marginRight="@dimen/magin_35"
            android:layout_marginTop="@dimen/magin_50"
            android:enabled="false"
            android:text="@string/next"></TextView>
    </LinearLayout>
</ScrollView>