<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/my_line_h"
        android:background="@color/colorf8f8f8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magin_30"
        android:src="@drawable/icon_comment_success" />

    <LinearLayout
        android:id="@+id/ll_go_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/magin_25"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/evaluation_success"
            android:textColor="@color/color666666"
            android:textSize="@dimen/font14" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lookat"
            android:textColor="@color/color00c8aa"
            android:textSize="@dimen/font14" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_post"
        style="@style/my_bt"
        android:layout_marginLeft="@dimen/magin_35"
        android:layout_marginRight="@dimen/magin_35"
        android:layout_marginTop="@dimen/magin_30"
        android:enabled="true"
        android:text="@string/back_home"></TextView>
</LinearLayout>