<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorf6f6f6"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magin_90"
            android:gravity="center"
            android:text="@string/health_assessment01"
            android:textColor="@color/color333333"
            android:textSize="@dimen/font18" />

        <TextView
            android:id="@+id/btn_zhongyitizhi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:layout_marginLeft="@dimen/magin_60"
            android:layout_marginRight="@dimen/magin_60"
            android:layout_marginTop="@dimen/magin_30"
            android:background="@drawable/healthcheck_item_background"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/health_assessment02"
            android:textColor="@drawable/healthcheck_item_text_colorback"
            android:textSize="@dimen/font20"></TextView>

        <TextView
            android:id="@+id/btn_jichudaixie"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:layout_marginLeft="@dimen/magin_60"
            android:layout_marginRight="@dimen/magin_60"
            android:layout_marginTop="@dimen/magin_30"
            android:background="@drawable/healthcheck_item_background"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/health_assessment03"
            android:textColor="@drawable/healthcheck_item_text_colorback"
            android:textSize="@dimen/font20"></TextView>


        <TextView
            android:id="@+id/btn_fukejiankang"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45"
            android:layout_marginLeft="@dimen/magin_60"
            android:layout_marginRight="@dimen/magin_60"
            android:layout_marginTop="@dimen/size_30"
            android:background="@drawable/healthcheck_item_background"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/health_assessment04"
            android:textColor="@drawable/healthcheck_item_text_colorback"
            android:textSize="@dimen/font20"></TextView>

    </LinearLayout>

</ScrollView>