<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="@style/my_line_h"
        android:background="@color/colorf8f8f8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/magin_20"
        android:layout_marginTop="@dimen/magin_50"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/size_60"
            android:layout_height="@dimen/size_60"

            android:src="@drawable/icon_app" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magin_18"
            android:text="@string/app_name"
            android:textColor="@color/color333333"
            android:textSize="@dimen/font18" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="版本号：V1.0.1"
            android:textColor="@color/color999999"
            android:textSize="@dimen/font12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/magin_20"
            android:layout_marginRight="@dimen/magin_20"
            android:layout_marginTop="@dimen/magin_35"
            android:gravity="center"
            android:text="@string/mine03"
            android:textColor="@color/color999999"
            android:textSize="@dimen/font12" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_fuwuxieyi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginLeft="@dimen/magin_22"
        android:layout_marginRight="@dimen/magin_22"
        android:drawableRight="@drawable/jiantou_hui"
        android:gravity="center_vertical"
        android:text="@string/mine04"
        android:textColor="@color/color666666"
        android:textSize="@dimen/font14" />

    <TextView
        style="@style/my_line_h"
        android:layout_marginLeft="@dimen/magin_22"
        android:layout_marginRight="@dimen/magin_22"
        android:background="@color/coloreeeeee" />

    <TextView
        android:id="@+id/tv_yisixieyi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginLeft="@dimen/magin_22"
        android:layout_marginRight="@dimen/magin_22"
        android:drawableRight="@drawable/jiantou_hui"
        android:gravity="center_vertical"
        android:text="@string/mine05"
        android:textColor="@color/color666666"
        android:textSize="@dimen/font14" />

    <TextView
        style="@style/my_line_h"
        android:layout_marginLeft="@dimen/magin_22"
        android:layout_marginRight="@dimen/magin_22"
        android:background="@color/coloreeeeee" />
</LinearLayout>